--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Check for large file in your home directory.",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./dist/main.js",
+    "build": "babel src --out-dir dist",
+    "watch": "babel src --watch --out-dir dist"
   },
   "repository": {
     "type": "git",
@@ -17,6 +19,12 @@
   },
   "homepage": "https://github.com/rBurgett/home-space-check#readme",
   "devDependencies": {
+    "babel-core": "^6.10.4",
+    "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
     "eslint": "^2.13.1"
+  },
+  "dependencies": {
+    "promisify-node": "^0.4.0"
   }
 }
